--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 
 /* Your CSS Code here. */
-.Accio{
+main .accio #job {
     width: 150px;
     height: 150px;
     background-color: black;
 }
-.hello-accio-job{
-    color: white;
+p.hello-accio-job{
+    color:black;
     margin-left: 32px;
     padding: 10px;
 }
