--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 /* Your CSS Code here. */
-main .accio #job {
+main .Accio #Job {
     width: 150px;
     height: 150px;
     background-color: black;
