--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 
 /* Your CSS Code here. */
-main .Accio {
+main.accio#job {
     width: 150px;
     height: 150px;
     background-color: black;
 }
 p.hello-accio-job{
-    color:black;
+    color:white;
     margin-left: 32px;
     padding: 10px;
 }
