--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ main.accio#job {
     height: 150px;
     background-color: black;
 }
-p.hello-accio-job{
+p.hello-accio{
     color:white;
     margin-left: 32px;
     padding: 10px;
